[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Camera.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=4]
resource_name = "standing_collider"
radius = 0.7

[sub_resource type="CapsuleShape" id=3]
resource_name = "crouched_collider"
radius = 0.7
height = 0.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.7

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="StandingCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.2, 0 )
shape = SubResource( 4 )

[node name="CrouchingCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.95, 0 )
shape = SubResource( 3 )
disabled = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.2, 0 )
mesh = SubResource( 2 )

[node name="CameraContainer" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )

[node name="Camera" type="Camera" parent="CameraContainer"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
fov = 90.0
script = ExtResource( 2 )

[node name="Tracer" type="Spatial" parent="."]
